# crypto-ohlcv-data

./: LICENSE  pyproject.toml
data/btc/: btc_usdt_15min.parquet  btc_usdt_1D.csv  btc_usdt_1D.parquet  btc_usdt_1min.parquet  btc_usdt_5min.parquet  btc_usdt_60min.parquet
data/eth/: eth_usdt_15min.parquet  eth_usdt_1D.parquet  eth_usdt_1min.parquet  eth_usdt_5min.parquet  eth_usdt_60min.parquet
src/: features.ipynb  fetch_data.py  resample_csv.py
