[project]
name = "crypto"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "anywidget>=0.9.21",
    "ccxt>=4.5.40",
    "ipykernel>=7.2.0",
    "nbformat>=5.10.4",
    "pandas[pyarrow]>=3.0.1",
    "plotly>=6.5.2",
    "vectorbt>=0.28.2",
    "xgboost>=3.2.0",
]
